--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <table align="center">
         <tr>
             <td>
-                <form action="" method="GET">
+                <form action="index2.1.html" method="GET">
                     <fieldset>
                         <label for="tipo">Tipo de Documento*</label> <br>
                         <input type="text" name="tipo" id="tipo" placeholder="DNI"> <br><br>
