--- a/index2.1.html
+++ b/index2.1.html
@@ -12,6 +12,7 @@
     </style>
 </head>
 <body>
+    <form action="index3.html" method="GET">
     <div>
     <h1>Estos son los 10 atractivos más visitados del Perú: el primero está en Lima</h1>
     <p>El Ministerio de Comercio Exterior y Turismo presentó las cifras de los asistentes a los principales atractivos turísticos del país en el primer trimestre del 2024</p>
@@ -66,6 +67,8 @@
     <h2>10. Parque Arqueológico de Pisac (105 mil visitantes)</h2>
     <p>Pisac es un destacado destino en el Valle Sagrado de los Incas, en Cusco, Perú, famoso por su colorido mercado artesanal y las impresionantes ruinas arqueológicas incas. El mercado ofrece una amplia gama de artesanías locales, permitiendo a los visitantes sumergirse en la rica cultura andina. Las ruinas, por otro lado, son un testimonio de la avanzada arquitectura e ingeniería inca, con sus terrazas agrícolas, complejos residenciales y sistemas de acueductos, ofreciendo vistas espectaculares y una profunda comprensión de la historia inca.</p>
 
+    <button>Siguiente pagina</button>
+</form>
 </div>
 </body>
 </html>
